--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -2,5 +2,51 @@
 @import "~/styles/utils.scss";
 
 .container {
-  // background-color: red;
+  @include screenMd {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .titleBox {
+    text-align: center;
+    height: 250px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    p {
+      font-size: 34px;
+      line-height: 44px;
+      margin: auto 0;
+      background: linear-gradient(90deg, #4158D0, #C850C0 30%, #ffb005);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+
+      @include screenMd {
+        font-size: 25px;
+      }
+    }
+  }
+  
+  .mainContent {
+    margin: 50px auto 0;
+    max-width: $max-width;
+
+    @include screenMd {
+      margin-top: 0;
+    }
+
+    .cards {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      row-gap: 50px;
+      place-items: center;
+
+      @include screenMd {
+        grid-template-columns: auto;
+      }
+    }
+  }
 }
