feat: 🎸 [category]全てのアニメ紹介ページ作成

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -38,6 +38,10 @@
       margin-top: 0;
     }
 
+    .allContents {
+      margin: 0 auto 100px;
+    }
+
     .cards {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
